objects/PriceListItem__c.object
<CustomObject>    
    <description>Represents a product entry in a price list.</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ARIS_GUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ARIS GUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>    
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the price list item is active. Inactive price list items are ignored.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllocateGroupAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether group adjustments should be allocated to the product</description>
        <label>Allocate Group Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowManualAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether manual price adjustments are allowed for the product</description>
        <label>Allow Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowPriceRampOverlap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether overlapping price ramps are allowed</description>
        <inlineHelpText>Indicates whether overlapping price ramps are allowed</inlineHelpText>
        <label>Allow Price Ramp Overlap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowProration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether proration is allowed for the product.</description>
        <label>Allow Proration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoCascadeQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quantity is auto cascaded from the bundle product to the options. Only applicable for recurring and usage price types</description>
        <inlineHelpText>Indicates whether the quantity is auto cascaded from the bundle product to the options. Only applicable for recurring and usage price types</inlineHelpText>
        <label>Auto Cascade Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoCascadeSellingTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the selling term is auto cascaded from the bundle product to the options. Only applicable for recurring and usage price types.</description>
        <inlineHelpText>Indicates whether the selling term is auto cascaded from the bundle product to the options. Only applicable for recurring and usage price types.</inlineHelpText>
        <label>Auto Cascade Selling Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recurring item would auto renew at end of term</description>
        <inlineHelpText>Indicates whether the recurring item would auto renew at end of term</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewalTerm__c</fullName>
        <description>The auto renewal term</description>
        <inlineHelpText>The auto renewal term</inlineHelpText>
        <label>Auto Renewal Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutoRenewalType__c</fullName>
        <description>The auto renewal type</description>
        <inlineHelpText>The auto renewal type</inlineHelpText>
        <label>Auto Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual (Calendar Billing)</fullName>
                </value>
                <value>
                    <fullName>Annual (Anniversary Billing)</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Bill on Ready for Billing Date</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargeType__c</fullName>
        <description>The charge type associated with the price</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Handling Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommittedQuantity__c</fullName>
        <description>The Quantity from Quote/Contract line items that was committed during price negotiation</description>
        <inlineHelpText>The Quantity from Quote/Contract line items that was committed during price negotiation</inlineHelpText>
        <label>Committed Quantity (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractItemNumber__c</fullName>
        <description>The Unique identifier for the item number as referred to in the quote or contract</description>
        <externalId>true</externalId>
        <inlineHelpText>The Unique identifier for the item number as referred to in the quote or contract</inlineHelpText>
        <label>Contract Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <description>The contract number associated with the price item</description>
        <formula>PriceListId__r.ContractNumber__c</formula>
        <inlineHelpText>The contract number associated with the price item</inlineHelpText>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPrice__c</fullName>
        <description>The contract price for the product.</description>
        <inlineHelpText>The contract price for the product.</inlineHelpText>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>The cost for the product</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <description>The item criteria specification</description>
        <label>Charge Type Criteria</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>    
    <fields>
        <fullName>DefaultPriceDatasource__c</fullName>
        <description>The data source which provides the default value for the base price.Only applicable when the default price from is available.</description>
        <inlineHelpText>The data source which provides the default value for the base price.Only applicable when the default price from is available.</inlineHelpText>
        <label>Default Price Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultPriceFrom__c</fullName>
        <description>The related object to default the base price from. If the related object is not available, the list price will be used.</description>
        <inlineHelpText>The related object to default the base price from. If the related object is not available, the list price will be used.</inlineHelpText>
        <label>Default Price From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Attribute</fullName>
                </value>
                <value>
                    <fullName>Advanced Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultQuantityDatasource__c</fullName>
        <description>The data source which provides the default value for the quantity.Only applicable when the default quantity from is available.</description>
        <inlineHelpText>The data source which provides the default value for the quantity.Only applicable when the default quantity from is available.</inlineHelpText>
        <label>Default Quantity Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultQuantityFrom__c</fullName>
        <description>The related object to default the quantity from. If the related object is not available, the quantity default value will be used.</description>
        <inlineHelpText>The related object to default the quantity from. If the related object is not available, the quantity default value will be used.</inlineHelpText>
        <label>Default Quantity From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Configuration</fullName>
                </value>
                <value>
                    <fullName>Product Attribute</fullName>
                </value>
                <value>
                    <fullName>Advanced Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultQuantity__c</fullName>
        <description>The default quantity for the product or service</description>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultSellingTerm__c</fullName>
        <description>The default selling term for the product or service</description>
        <label>Default Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the price list.item</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisableAssetIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether asset integration is disabled for the product or service</description>
        <inlineHelpText>Indicates whether asset integration is disabled for the product or service</inlineHelpText>
        <label>Disable Asset Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableCostModel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether cost model is disabled for the product or service</description>
        <inlineHelpText>Indicates whether cost model is disabled for the product or service</inlineHelpText>
        <label>Disable Cost Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableSyncWithOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether synchronization of the product/service with the opportunity is disabled.</description>
        <inlineHelpText>Indicates whether synchronization of the product/service with the opportunity is disabled.</inlineHelpText>
        <label>Disable Sync With Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>The price effective date. The price becomes effective on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnableAutoRampCreation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether price ramps are auto created based on ramp frequency and enforces bundle and option dates.</description>
        <inlineHelpText>Indicates whether price ramps are auto created based on ramp frequency and enforces bundle and option dates.</inlineHelpText>
        <label>Enable Auto Ramp Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableCommitment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether volumeor revenue commitment is enabled for the product or option</description>
        <inlineHelpText>Indicates whether volumeor revenue commitment is enabled for the product or option</inlineHelpText>
        <label>Enable Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnablePriceRamp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether price ramp is enabled for the product or option</description>
        <inlineHelpText>Indicates whether price ramp is enabled for the product or option</inlineHelpText>
        <label>Enable Price Ramp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>The price expiration date. The price becomes ineffective after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>The frequency associated with the recurring or usage price</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PriceType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasCriteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price item has criteria associated with the charge type</description>
        <inlineHelpText>Indicates whether the price item has criteria associated with the charge type</inlineHelpText>
        <label>Has Charge Type Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsQuantityReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quantity is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the quantity is modifiable for the product or option</inlineHelpText>
        <label>Is Quantity Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSellingTermReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the selling term is modifiable for the recurring product or option</description>
        <inlineHelpText>Indicates whether the selling term is modifiable for the recurring product or option</inlineHelpText>
        <label>Is Selling Term Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUsageTierModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the usage price tier is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the usage price tier is modifiable for the product or option</inlineHelpText>
        <label>Is Usage Tier Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <description>The list price for the product</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxPrice__c</fullName>
        <description>The maximum price or net adjustment % for the line item.</description>
        <inlineHelpText>The maximum price or net adjustment % for the line item.</inlineHelpText>
        <label>Max Price/Net Adj %</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxUsageQuantity__c</fullName>
        <description>The maximum usage quantity. Only applicable to usage items.</description>
        <inlineHelpText>The maximum usage quantity. Only applicable to usage items.</inlineHelpText>
        <label>Max Usage Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinMaxPriceAppliesTo__c</fullName>
        <description>Indicates the price field the min/max price rule should be applied to</description>
        <label>Min/Max Price Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>Base Extended Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MinPrice__c</fullName>
        <description>The minimum price or net adjustment % for the line item</description>
        <inlineHelpText>The minimum price or net adjustment % for the line item</inlineHelpText>
        <label>Min Price/Net Adj %</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinUsageQuantity__c</fullName>
        <description>The minimum usage quantity. Only applicable to usage items.</description>
        <inlineHelpText>The minimum usage quantity. Only applicable to usage items.</inlineHelpText>
        <label>Min Usage Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMatrices__c</fullName>
        <description>Indicates the number of price matrices associated with the price list item</description>
        <label>Number Of Matrices</label>
        <summaryForeignKey>PriceMatrix__c.PriceListItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PriceIncludedInBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option price is included in the bundle. Only applicable to product options.</description>
        <label>Price Included In Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceListId__c</fullName>
        <description>ID of the price list associated with the product</description>
        <label>Price List</label>
        <referenceTo>PriceList__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PriceMethod__c</fullName>
        <description>The price method</description>
        <label>Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                    <default>true</default>
                    <label>Per Unit</label>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Related Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceType__c</fullName>
        <description>The price type</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Included Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceUom__c</fullName>
        <description>The pricing unit of measure for the product</description>
        <label>Price Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductActive__c</fullName>
        <description>Indicates whether the product is active</description>
        <formula>ProductId__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the product is active</inlineHelpText>
        <label>Product Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>The product code</description>
        <formula>ProductId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product code</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <description>The product description</description>
        <formula>ProductId__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product description</inlineHelpText>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>The product family</description>
        <formula>TEXT(ProductId__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product family</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product associated with the price list</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>The product name</description>
        <formula>ProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product name</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>        
    <fields>
        <fullName>RelatedAdjustmentAmount__c</fullName>
        <inlineHelpText>The related item price adjustment amount.</inlineHelpText>
        <label>Related Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedAdjustmentAppliesTo__c</fullName>
        <description>Indicates the price field the related item price adjustment should be applied to.</description>
        <label>Related Adjustment Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>Base Extended Price</fullName>
                </value>
                <value>
                    <fullName>Extended Price</fullName>
                </value>
                <value>
                    <fullName>Net Price</fullName>
                </value>
                <value>
                    <fullName>Unit Net Price</fullName>
                </value>
                <value>
                    <fullName>Average Unit Net Price</fullName>
                </value>
                <value>
                    <fullName>Net Unit Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedAdjustmentType__c</fullName>
        <description>The related item price adjustment type</description>
        <label>Related Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related price list item</description>
        <label>Related Price List Item</label>
        <referenceTo>PriceListItem__c</referenceTo>
        <relationshipLabel>Related Price List Items</relationshipLabel>
        <relationshipName>RelatedPriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedPercentAppliesTo__c</fullName>
        <description>Indicates the price field the percentage should be applied to</description>
        <label>Percent Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>Base Extended Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedPercent__c</fullName>
        <description>The list price expressed as a percentage of the related price list item</description>
        <label>Percent</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>        
    <fields>
        <fullName>RollupPriceToBundle__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the option price is rolled up to the bundle. Only applicable to product options.This field is deprecated. Use the Price Included in Bundle field instead.</description>
        <inlineHelpText>Indicates whether the quantity is auto updated when the default quantity field gets a new value</inlineHelpText>
        <label>Auto Update Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesOrderQuantity__c</fullName>
        <description>The Total quantity for which sales orders have already been created against the contract price list Item</description>
        <inlineHelpText>The Total quantity for which sales orders have already been created against the contract price list Item</inlineHelpText>
        <label>Sales Order Quantity (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>The charge type sequence</description>
        <inlineHelpText>The charge type sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>The price list item sub type</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>    
    <fields>
        <fullName>TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price item is taxable</description>
        <inlineHelpText>Indicates whether the price item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The price list item type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>        
    <fields>
        <fullName>Original_Currency__c</fullName>
        <description>The field is used to store the original currency of the product at the PLI level. This must be populated for each of the product’s PLI.</description>
        <label>Original Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Entity__c</fullName>
        <description>The selling entity is stored on each PLI level which is down streamed at line item. For the PLIs where it is not stored, the system automation will try to pick the selling entity from the account’s country object and set it to line item.</description>
        <label>Selling Entity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>RFP Price List Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Items</pluralLabel> 
    <sharingModel>ControlledByParent</sharingModel>       
</CustomObject>